--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <td>20CS641/<br> 20CS642 /<br> 20CS643</td>
                 <td>Cloud Computing /<br>Automotive Cyber Security /<br> Cyber Security</td>
                 <td>3</td>
-                <td>Prof. MAA /<br> Prof. HDN /<br> Prof. SPM /<br> Prof. RP /<br>Prof. RK</td>
+                <td>Prof. MAA /<br> Prof. HDN /<br> Prof. SPM / Prof. RP / Prof. RK</td>
               </tr>
         
               <tr>
